# swath

./: CMakeLists.txt  ChangeLog  README  generateSourceList.ps1
data/: comand.txt  update-dict.sh
libs/datrie/tools/: trietool.c
src/: dict.cpp  filterrtf.cpp  wordseg.cpp
tool/: tool.vcxproj  tool.vcxproj.filters
